Dummy_Package_for_scratch_org/main/default/objects/Application__c/fields/Product_Manager__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>