Dummy_Package_for_scratch_org/main/default/objects/Application__c/fields/Stability_Icon__c.field-meta.xml
<CustomField>
    <fullName>Stability_Icon__c</fullName>
    <formula>IMAGE( 
CASE( Stability__c, 
&quot;Stable&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Uncertain&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Unstable&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Stability Icon&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stability Icon</label>
    <type>Text</type>
</CustomField>